--- a/app.json
+++ b/app.json
@@ -37,7 +37,17 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "name": "BHT Detector - Costanza Pasquotto Assef",
+      "shortName": "BHT Detector",
+      "lang": "pt-BR",
+      "scope": "/",
+      "themeColor": "#0a7ea4",
+      "description": "Aplicativo desenvolvido por Costanza Pasquotto Assef para detectar BHT em rótulos de alimentos. Use a câmera para escanear e descobrir se o produto contém Butylated Hydroxytoluene.",
+      "startUrl": "/",
+      "display": "standalone",
+      "orientation": "portrait",
+      "backgroundColor": "#ffffff"
     },
     "plugins": [
       "expo-router",
