feat: adiciona suporte completo para PWA (Progressive Web App) - manifest.json e meta tags para instalaÃ§Ã£o

--- a/app.json
+++ b/app.json
@@ -47,7 +47,9 @@
       "startUrl": "/",
       "display": "standalone",
       "orientation": "portrait",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "bundler": "metro",
+      "preventAutoOpenAsync": false
     },
     "plugins": [
       "expo-router",
