--- a/app.json
+++ b/app.json
@@ -21,20 +21,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.costanza.bhtdetector",
-      "buildNumber": "1.0.0",
-      "infoPlist": {
-        "NSCameraUsageDescription": "O app precisa de acesso à câmera para escanear rótulos de alimentos.",
-        "NSPhotoLibraryUsageDescription": "O app precisa de acesso às suas fotos para analisar rótulos de alimentos."
-      }
+      "buildNumber": "1.0.0"
     },
     "android": {
       "package": "com.costanza.bhtdetector",
       "versionCode": 1,
-      "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
-      ],
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -58,14 +49,7 @@
       "orientation": "portrait",
       "backgroundColor": "#ffffff",
       "bundler": "metro",
-      "preventAutoOpenAsync": false,
-      "build": {
-        "babel": {
-          "include": [
-            "@expo/metro-runtime"
-          ]
-        }
-      }
+      "preventAutoOpenAsync": false
     },
     "plugins": [
       "expo-router",
