fix: corrige caminhos de arquivos estÃ¡ticos e favicon no Vercel - resolve erros 404

--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,18 @@
   ],
   "rewrites": [
     {
+      "source": "/_expo/static/(.*)",
+      "destination": "/_expo/static/$1"
+    },
+    {
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1"
+    },
+    {
+      "source": "/(favicon\\.ico|manifest\\.json|robots\\.txt|sitemap\\.xml|sw\\.js)",
+      "destination": "/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
