--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,15 +11,15 @@
   "lang": "pt-BR",
   "icons": [
     {
-      "src": "/assets/images/favicon.png",
+      "src": "/favicon.ico",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/x-icon",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/images/favicon.png",
+      "src": "/favicon.ico",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/x-icon",
       "purpose": "any maskable"
     }
   ],
@@ -33,7 +33,7 @@
       "url": "/scan",
       "icons": [
         {
-          "src": "/assets/images/favicon.png",
+          "src": "/favicon.ico",
           "sizes": "192x192"
         }
       ]
