--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,7 @@
   "icons": [
     {
       "src": "/favicon.ico",
-      "sizes": "192x192",
-      "type": "image/x-icon",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/favicon.ico",
-      "sizes": "512x512",
+      "sizes": "any",
       "type": "image/x-icon",
       "purpose": "any maskable"
     }
