fix: corrige cores dos botÃµes e melhora histÃ³rico com filtros e busca

--- a/app.json
+++ b/app.json
@@ -47,9 +47,7 @@
       "startUrl": "/",
       "display": "standalone",
       "orientation": "portrait",
-      "backgroundColor": "#ffffff",
-      "bundler": "metro",
-      "preventAutoOpenAsync": false
+      "backgroundColor": "#ffffff"
     },
     "plugins": [
       "expo-router",
